--- a/apps/templates/home/tables.html
+++ b/apps/templates/home/tables.html
@@ -9,7 +9,7 @@
 
 
 
-<iframe title="Tables" src="http://127.0.0.1:8000/managetable/" height="650" width="1240"></iframe>
+<iframe title="Tables" src="https://warehousesg.herokuapp.com/managetable/" height="650" width="1240"></iframe>
 
 
 
